src/test/deca/syntax/valid/math-for-do-include.deca
{
int x = 10;
float pi = 3.12;
}