src/test/deca/syntax/invalid/invalid-float3.deca
{
    float x = 1.2.3; // Format incorrect
}
